changed main.py to display my website on GCP

--- a/week1/templates/base.html
+++ b/week1/templates/base.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
   </head>
   <body>
+    <div class="topnav">
+      <a class="active" href="/week1/templates/index.html"></a>
+    </div>
 
   <!-- this headline will appear on all pages. -->
   <header>
